# numeric-prelude-accelerate

./: .travis.yml  README.md  numeric-prelude-accelerate.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.2.yaml
Data/Array/Accelerate/Algebra/: Absolute.hs  Additive.hs  Algebraic.hs  Field.hs  IntegralDomain.hs  Module.hs  PrincipalIdealDomain.hs  RealField.hs  RealIntegral.hs  RealRing.hs  RealTranscendental.hs  Ring.hs  ToInteger.hs  ToRational.hs  Transcendental.hs  Units.hs  ZeroTestable.hs
Data/Array/Accelerate/Number/: Complex.hs
