name:                 numeric-prelude-accelerate
version:              0.1.0.0
synopsis:             Lifting numeric-prelude into Accelerate
description:          Lifting numeric-prelude into Accelerate
homepage:             https://github.com/tmcdonell/numeric-prelude-accelerate
license:              BSD3
license-file:         LICENSE
author:               Trevor L. McDonell
maintainer:           Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
copyright:            Copyright (c) [2016] Trevor L. McDonell
category:             Math
build-type:           Simple
cabal-version:        >=1.10
-- extra-source-files:

library
  default-language:   Haskell2010
  build-depends:
        base                    >= 4.7 && < 4.9
      , accelerate              >= 0.16
      , numeric-prelude         >= 0.4.2

  exposed-modules:
      Data.Array.Accelerate.Algebra.Additive

  ghc-options:        -Wall

