name:                 numeric-prelude-accelerate
version:              0.1.0.0
synopsis:             Lifting numeric-prelude into Accelerate
description:          Lifting numeric-prelude into Accelerate
homepage:             https://github.com/tmcdonell/numeric-prelude-accelerate
license:              BSD3
license-file:         LICENSE
author:               Trevor L. McDonell
maintainer:           Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
copyright:            Copyright (c) [2016] Trevor L. McDonell
category:             Math
build-type:           Simple
cabal-version:        >=1.10
-- extra-source-files:

library
  default-language:   Haskell2010
  build-depends:
        base                    >= 4.7 && < 4.9
      , accelerate              >= 0.16
      , numeric-prelude         >= 0.4.2

  exposed-modules:
      Data.Array.Accelerate.Algebra.Transcendental
      Data.Array.Accelerate.Algebra.Absolute
      Data.Array.Accelerate.Algebra.Additive
      Data.Array.Accelerate.Algebra.Algebraic
      Data.Array.Accelerate.Algebra.Field
      Data.Array.Accelerate.Algebra.IntegralDomain
      Data.Array.Accelerate.Algebra.RealIntegral
      Data.Array.Accelerate.Algebra.Ring
      Data.Array.Accelerate.Algebra.ToInteger
      Data.Array.Accelerate.Algebra.ToRational
      Data.Array.Accelerate.Algebra.ZeroTestable

      Data.Array.Accelerate.Number.Complex

  ghc-options:        -Wall

